--- a/contact-center.html
+++ b/contact-center.html
@@ -10,8 +10,6 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="fabs/css/cojoin.css">
   <link rel="stylesheet" href="fabs/css/chatbot.css">
-  <script src="https://js.hcaptcha.com/1/api.js" async defer></script>
-  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.2.6/purify.min.js" integrity="sha384-JEyTNhjM6R1ElGoJns4U2Ln4ofPcqzSsynQkmEc/KGy6336qAZl70tDLufbkla+3" crossorigin="anonymous" defer></script>
 </head>
 <body class="page-contact-center">
@@ -67,10 +65,11 @@
   </main>
   <footer class="ops-footer" data-key="footer-copyright" role="contentinfo">© 2025 OPS Online Support.</footer>
   <div id="modal-root"></div>
-  <script src="js/langtheme.js" defer></script>
-  <script src="js/main.js" defer></script>
-  <script src="fabs/js/cojoin.js"></script>
-  <script src="fabs/js/chattia.js"></script>
-  <script src="cojoinlistener.js"></script>
+    <script src="js/langtheme.js" defer></script>
+    <script src="js/main.js" defer></script>
+    <script src="js/security-utils.js"></script>
+    <script src="fabs/js/cojoin.js"></script>
+    <script src="fabs/js/chattia.js"></script>
+    <script src="cojoinlistener.js"></script>
 </body>
 </html>
